tests/compile-fail/tracked_struct_unknown_attribute.stderr
error: only a single lifetime parameter is accepted
 --> tests/compile-fail/tracked_struct_unknown_attribute.rs:1:1
  |
1 | #[salsa::tracked]
  | ^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `salsa::tracked` (in Nightly builds, run with -Z macro-backtrace for more info)

error: cannot find attribute `unknown_attr` in this scope
 --> tests/compile-fail/tracked_struct_unknown_attribute.rs:4:7
  |
4 |     #[unknown_attr]
  |       ^^^^^^^^^^^^
